--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/rifnd/moon-bot#readme",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@whiskeysockets/baileys": "latest",
+    "@whiskeysockets/baileys": "github:whiskeysockets/baileys",
     "awesome-phonenumber": "^5.6.0",
     "cfonts": "^2.10.1",
     "chalk": "^4.1.2",
